Revert "Revert "Name change and small bug fix""
This reverts commit d55e15c560ed65ecbeaae47724b57a44bb6d4e01.
