# swagger.json
@@ -1281,7 +1281,7 @@
                     "minLength": 2
                 },
                 {
-                    "name": "userSurveyStatus",
+                    "name": "user-survey-status",
                     "in": "query",
                     "description": "User status of survey completion",
                     "required": false,
@@ -1353,7 +1353,7 @@
                             "required": ["status"],
                             "properties": {
                                 "status": {
-                                    "$ref": "#/definitions/userSurveyStatus"
+                                    "$ref": "#/definitions/user-survey-status"
                                 }
                             },
                             "additionalProperties": false
@@ -2782,7 +2782,7 @@
                     "type": "string"
                 },
                 "status": {
-                    "$ref": "#/definitions/userSurveyStatus"
+                    "$ref": "#/definitions/user-survey-status"
                 }
             },
             "additionalProperties": false
@@ -3753,7 +3753,7 @@
             },
             "additionalProperties": false
         },
-        "userSurveyStatus": {
+        "user-survey-status": {
             "type": "string",
             "enum": ["new", "in-progress", "completed"]
         },
@@ -3762,7 +3762,7 @@
             "required": ["status", "survey"],
             "properties": {
                 "status": {
-                    "$ref": "#/definitions/userSurveyStatus"
+                    "$ref": "#/definitions/user-survey-status"
                 },
                 "survey": {
                     "$ref": "#/definitions/survey"
@@ -3775,7 +3775,7 @@
             "required": ["status", "answers"],
             "properties": {
                 "status": {
-                    "$ref": "#/definitions/userSurveyStatus"
+                    "$ref": "#/definitions/user-survey-status"
                 },
                 "answers": {
                     "$ref": "#/definitions/linkedAnswers"
@@ -3792,7 +3792,7 @@
             "required": ["status", "answers"],
             "properties": {
                 "status": {
-                    "$ref": "#/definitions/userSurveyStatus"
+                    "$ref": "#/definitions/user-survey-status"
                 },
                 "answers": {
                     "$ref": "#/definitions/linkedAnswers"
